# image-captioning

./: README.md  config.py  main.py  pyproject.toml  train.py
assets/: vocab.pkl
data/: vocab.pkl
image-captioning/models/: decoder.py  encoder.py
image-captioning/utils/: coco_dataset.py  vocabulary.py
image_captioning/: __init__.py
image_captioning/models/: NIC.py  __init__.py  decoder.py  encoder.py  nic.py
image_captioning/utils/: __init__.py  coco_dataset.py  image_tranformation.py  imagenet.py  vocabulary.py
scripts/: evaluate.py  train.py
